<resources>
    <string name="app_name">Depo</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lbl_kayit_ol">Kayıt Ol</string>
    <string name="title_activity_bottom_nav_bar">Bottom_NavBar_Activity</string>
    <string name="copyright">Copyright © 2022 All Rights Reserved.</string>
    <string name="logo">Logo</string>
    <string name="email_text">E-Mail</string>
    <string name="hey_giris_yap">Hey, \nGiriş yap.</string>
    <string name="sifre">Şifre</string>
    <string name="beni_hatirla">Beni Hatırla</string>
    <string name="btn_giris_yap">Giriş Yap</string>
    <string name="btn_google_giris">Google Giriş</string>
    <string name="btnKaydol">Kayıt ol</string>
    <string name="txtHosgeldniz">Hoşgeldiniz</string>
    <string name="cdTodo">TODO</string>
    <string name="txtDepoIslemleri">Depo İşlemleri</string>
    <string name="txtUrunIslemleri">Ürün İşlemleri</string>
    <string name="ad_soyad_hint">Ad-Soyad</string>
    <string name="e_posta_hint">E-Posta</string>
    <string name="CD_logo">Logo</string>
    <string name="sifre_hint">Şifre</string>
    <string name="kayit_ol_hint">KAYIT OL</string>
    <string name="CD_logo_image">Logo Image</string>
    <string name="txt_depolarima_ekle">DEPOLARIMA Ekle</string>
    <string name="txt_urunu_ekle">Ürünü ekle</string>
    <string name="txt_depo_buyuklugu">DEPO BÜYÜKLÜĞÜ (KG)</string>
    <string name="txt_depolarim">Depolarım</string>
    <string name="txt_yeni_depo_ekle">YENİ DEPO EKLE</string>
    <string name="txt_hosgeldin">Hoşgeldin</string>
    <string name="txt_stok_islemleri">Stok İşlemleri</string>
    <string name="txt_son_islemler">Son İşlemler</string>
    <string name="txt_kategoriler">Kategoriler</string>
    <string name="txt_Urun_Ekle">Ürün Ekle</string>
    <string name="txt_Urun_Adi">Ürün Adı</string>
    <string name="CD_UrunKategorileri">Ürün Kategorileri</string>
    <string name="txt_UrunDeposu">Ürün Deposu</string>
    <string name="txt_UrunMiktar_hint">Ürün Miktarı (Adet)</string>
    <string name="btnTextEkle">Ekle</string>
    <string name="kategori_hint">Kategori</string>
    <string name="urunlerim_yeniurunekle">Yeni ürün ekle</string>
    <string name="item_depo_adresi">Depo adresi :</string>
    <string name="item_depo_ad">Depo Adı</string>
    <string name="item_depoBuyuklugu">Depo büyüklüğü :</string>
    <string name="depo_itemLogo">📦</string>
    <string name="kategori_itemLogo">🗒️</string>
    <string name="item_kategori_ad">Eklenen Item Name</string>
    <string name="item_urun_adeti">Ürün adeti :</string>
    <string name="item_urunAdi">Ürün Adı</string>
    <string name="urunDeposu_item">Ürün deposu :</string>
    <string name="urunMiktari_item">Ürün miktarı :</string>
    <string name="sonIslemlerSecimTexti">Depolarınız ve ürünleriniz için düzenli bir şekilde tutulan son işlemlerinize aşağıdaki butonlara tıklayarak ulaşabilirsiniz.</string>
</resources>