<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/kategori_itemLogo"
                android:textColor="@color/colorPrimary"
                android:textSize="50sp"
                android:textStyle="bold" />


            <!--
            <TextView
                android:layout_width="50dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:text="🏷️"
                android:textColor="@color/colorPrimary"
                android:textSize="35sp"
                android:textStyle="bold" />
            -->

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="100dp"
                android:layout_centerVertical="true"
                android:orientation="vertical">

                <!-- Ürün adı -->
                <TextView
                    android:id="@+id/KategoriAdi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/item_kategori_ad"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <!--Ürün Adeti -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/item_urun_adeti"
                        android:textColor="@color/colorPrimary" />


                    <TextView
                        android:id="@+id/KategoriUrunAdeti"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                </LinearLayout>

            </LinearLayout>
        </RelativeLayout>




    </LinearLayout>
</androidx.cardview.widget.CardView>






